--- a/tokenizers/examples/unstable_wasm/Cargo.toml
+++ b/tokenizers/examples/unstable_wasm/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "unstable_wasm"
+name = "hf-tokenizers-wasm"
 version = "0.1.0"
 authors = ["Nicolas Patry"]
 edition = "2018"
@@ -25,6 +25,7 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 #
 # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.5", optional = true }
+js-sys = "0.3.57"
 
 tokenizers = { path = "../../", default-features=false, features = ["unstable_wasm"]}
 
